2002-10-07  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.[ch] (gedit_document_find)(gedit_document_replace_all):	added the entire_word parameter
	
	* dialogs/replace.glade2: cosmetic changes

	* dialogs/gedit-dialog-replace.c: use the new find/replace dialog

2002-10-05  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.c (gedit_document_load)(gedit_document_load_from_stdin):
	don't convert to utf8 data if the are already utf8, fix a mem leak,
	always pass the right len to gtk_text_buffer_insert

	* gedit2.c (gedit_handle_automation_cmdline): don't convert to utf8 data if 
	they are already utf8, fix a mem leak,

	* gedit-utils.c (gedit_utils_convert_to_utf8): don't accept utf8 data,
	if encoding_used == NULL don't return the used encoding, fix a mem leak

2002-10-05  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-marshal.list: added VOID:OBJECT

	* gedit-menus.[ch] (gedit_menus_add_submenu)(gedit_menus_add_submenu_all)
	(gedit_menus_remove_submenu)(gedit_menus_remove_submenu_all): new functions

	* gedit-view.[ch]: new "populate_popup" signal
	(button_press_event): new function
	(gedit_view_get_gtk_text_view): new function

2002-10-03  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-view.c (gedit_view_line_numbers_expose): don't stop emission

	* dialogs/gedit-preferences-dialog.c (gedit_preferences_dialog_remove_enc_butt):
	select the item folllowing the removed item
	(gedit_preferences_dialog_encodings_treeview_selection_changed): focus buttons in
	the right way
	(gedit_preferences_dialog_up_enc_button_clicked): new function
	(gedit_preferences_dialog_down_enc_button_clicked): new function

2002-10-02  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.[ch]: removed old unused stuff related to tags
	(the old non-editable tag)

	* gedit-prefs-manager.c (gedit_prefs_manager_get_encodings):
	can return an empty list
	(gedit_prefs_manager_set_encodings): implemented

	* gedit-utils.c (gedit_utils_convert_to_utf8): manage wrong locales
