@@ -51,5 +51,6 @@ gedit_recent_init (void)
 	model = egg_recent_model_new (EGG_RECENT_MODEL_SORT_MRU);
 	egg_recent_model_set_limit (model,
 				gedit_prefs_manager_get_max_recents ());
-	egg_recent_model_set_filter_mime_types (model, "text/*", NULL);
+
+	egg_recent_model_set_filter_groups (model, "gedit", NULL);
 }
