@@ -27,7 +27,9 @@
 #include <stdlib.h>
 #include <gtk/gtk.h>
 #include <libgnomevfs/gnome-vfs.h>
+#ifndef USE_STABLE_LIBGNOMEUI
 #include <libgnomeui/gnome-icon-theme.h>
+#endif
 #include <gconf/gconf-client.h>
 #include "egg-recent-model.h"
 #include "egg-recent-view.h"
@@ -50,8 +52,9 @@ struct _EggRecentViewGtk {
 
 	gboolean show_icons;
 	gboolean show_numbers;
-
+#ifndef USE_STABLE_LIBGNOMEUI
 	GnomeIconTheme *theme;
+#endif
 
 	EggRecentModel *model;
 	GConfClient *client;
@@ -216,9 +219,12 @@ egg_recent_view_gtk_new_menu_item (EggRecentViewGtk *view,
 
 
 		mime_type = egg_recent_item_get_mime_type (item);
-
+#ifndef USE_STABLE_LIBGNOMEUI
 		pixbuf = egg_recent_util_get_icon (view->theme, uri,
 						   mime_type);
+#else
+		pixbuf = NULL;
+#endif
 		image = gtk_image_new_from_pixbuf (pixbuf);
 
 		if (view->show_icons)
@@ -455,7 +461,9 @@ egg_recent_view_gtk_finalize (GObject *object)
 
 	g_object_unref (view->menu);
 	g_object_unref (view->model);
+#ifndef USE_STABLE_LIBGNOMEUI
 	g_object_unref (view->theme);
+#endif
 	g_object_unref (view->client);
 
 }
@@ -561,7 +569,9 @@ egg_recent_view_gtk_init (EggRecentViewGtk * view)
 	view->trailing_sep = FALSE;
 
 	view->uid = egg_recent_util_get_unique_id ();
+#ifndef USE_STABLE_LIBGNOMEUI
 	view->theme = gnome_icon_theme_new ();
+#endif
 }
 
 void
